CTransifex changelog

# now stats are being calculated as in transifex