@@ -48,3 +48,5 @@ COM_CTRANSIFEX_FOLLOW_TWITTER="Follow us on Twitter"
 COM_CTRANSIFEX_GET_SUB_FOR_PRO_PROJECTS="Please if you are using CTransifex for commercial projects(joomla components, modules, plugins) get a <a href='%s'>subscription</a>."
 COM_CTRANSIFEX_THANKYOU_SUBSCRIPTION="Thank you for supporting the development of CTransifex with your subscription!"
 COM_CTRANSIFEX_NO_PROJECTS_YET="You haven't created any project yet"
+COM_CTRANSIFEX_CONTRIBUTOR_INFO_LABEL="Contributor info"
+COM_CTRANSIFEX_CONTRIBUTOR_INFO_DESC="The text entered here will be displayed on single view of a language pack. Use it to motivate your users to contribute to the translations."
