@@ -3,3 +3,8 @@ COM_CTRANSIFEX_VIEW_AVAILABLE_TRANSLATIONS="View available translations"
 COM_CTRANSIFEX_TRANSLATION_PROJECTS="Translation projects"
 COM_CTRANSIFEX_TRANSLATIONS_FOR_PROJECT="Translations for %s"
 COM_CTRANSIFEX_CONTRIBUTE_NOW="Contribute now"
+COM_CTRANSIFEX_LANGUAGE_COMPLETE_AT="This language pack is translated at %s%%."
+COM_CTRANSIFEX_CONTAINS_FOLLOWING_RESOURCES="The language pack contains translations for the following resources"
+COM_CTRANSIFEX_LANGUAGE_PACK="%s language pack"
+COM_CTRANSIFEX_HELP_IMPROVE_THIS_TRANSLATION_NOW="Help improve this translation"
+COM_CTRANSIFEX_DOWNLOAD_NOW="Download now"
