@@ -1,3 +1,4 @@
 CTransifex changelog
 
++ added a language view
 # now stats are being calculated as in transifex
